Change DOCTYPE etc
Signed-off-by: janus_wel <janus.wel.3@gmail.com>

--- a/vimfiles/template/xhtml.html
+++ b/vimfiles/template/xhtml.html
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <meta http-equiv="Content-Style-Type" content="text/css" />
-  <meta name="description" content="内容説明" />
+  <meta name="description" content="contents" />
   <meta name="author" content="janus_wel" />
   <link rev="Made" href="mailto:janus.wel.3@gmail.com" />
   <link rel="Contents" href="URL" />
