--- a/vimfiles/template/xhtml5.xhtml
+++ b/vimfiles/template/xhtml5.xhtml
@@ -18,13 +18,13 @@
   <meta name="author" content="janus_wel" />
   <meta name="description" content="A template for xhtml5" />
   <meta name="keywords" content="example,template,xhtml,xhtml5" />
-<!-- Comment-out if you need it.
+<!-- Delete commenting out if you need it.
   <meta name="application-name" content="example" />
   <meta http-equiv="Refresh" content="300" />
 -->
 
   <!-- relations to external resources -->
-<!-- There are no definitions about these "rel" attributes in the W3C draft.
+<!-- I can't find definitions about these "rel" attributes in the W3C draft.
   <link rel="author" href="mailto:janus.wel.3@gmail.com" />
   <link rel="icon" href="icon.png" />
   <link rel="prefetch" href="03.html" />
@@ -126,7 +126,7 @@
 
     <footer>
       <a href="2010/09/01/0001">permalink</a>
-      <time pubdate datetime="2010-09-01T12:00:00.0+09:00"></time>
+      <time pubdate="" datetime="2010-09-01T12:00:00.0+09:00"></time>
       by <address>janus_wel</address>
     </footer>
   </article>
