--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -2,7 +2,7 @@
 
 <html lang="ja">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta name="description" content="contents">
