--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description" content="contents">
   <meta name="author" content="janus_wel">
-  <link rev="Made" href="mailto:janus.wel.3@gmail.com">
+  <link rel="author" href="http://example.com/author/">
   <link rel="Contents" href="URL">
   <link rel="Index" href="URL">
   <link rel="Parent" href="URL">
