--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -7,11 +7,8 @@
   <meta name="author" content="janus_wel">
   <link rel="author" href="http://example.com/author/">
   <link rel="Contents" href="URL">
-  <link rel="Index" href="URL">
-  <link rel="Parent" href="URL">
-  <link rel="Start" href="URL">
-  <link rel="Next" href="URL">
-  <link rel="Prev" href="URL">
+  <link rel="prev" href="http://example.com/">
+  <link rel="next" href="http://example.com/">
 
   <title>title</title>
 </head>
