--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -8,6 +8,7 @@
   <link rel="author" href="http://example.com/author/">
   <link rel="prev" href="http://example.com/">
   <link rel="next" href="http://example.com/">
+  <link rel="icon" href="http://example.com/images/favicon.ico">
 
   <title>title</title>
 </head>
