Add link element to specify style file

--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -10,6 +10,8 @@
   <link rel="next" href="http://example.com/">
   <link rel="icon" href="http://example.com/images/favicon.ico">
 
+  <link rel="stylesheet" href="styles/main.css">
+
   <title>title</title>
 </head>
 
