Relativize path for favicon

--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -8,7 +8,8 @@
   <link rel="author" href="http://example.com/author/">
   <link rel="prev" href="http://example.com/">
   <link rel="next" href="http://example.com/">
-  <link rel="icon" href="http://example.com/images/favicon.ico">
+
+  <link rel="icon" href="images/favicon.ico">
 
   <link rel="stylesheet" href="styles/main.css">
 
