Change charset name to canonical one

--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -2,7 +2,7 @@
 
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
 
   <meta name="description" content="contents">
   <meta name="author" content="janus_wel">
