--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
 
-  <meta name="description" content="contents">
+  <meta name="description" content="description for this page">
   <meta name="author" content="janus_wel">
+  <meta name="keywords" content="keywords,for,this,page">
 
   <link rel="author" href="http://example.com/author/">
 
