Add script element

--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -16,6 +16,8 @@
 
   <link rel="stylesheet" href="styles/main.css">
 
+  <script src="scripts/main.js"></script>
+
   <title>title</title>
 </head>
 
