--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -14,7 +14,7 @@
   <link rel="prev" href="http://example.com/">
   <link rel="next" href="http://example.com/">
 
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/main.css" media="all">
 
   <script src="scripts/main.js"></script>
 
