Change text elements and attr value to suite

--- a/vimfiles/template/html.html
+++ b/vimfiles/template/html.html
@@ -7,7 +7,7 @@
   <meta name="author" content="janus_wel">
   <link rel="author" href="http://example.com/author/">
 
-  <meta name="description" content="description for this page">
+  <meta name="description" content="HTML5 template">
   <meta name="keywords" content="keywords,for,this,page">
   <link rel="icon" href="images/favicon.ico">
 
@@ -18,11 +18,11 @@
 
   <script src="scripts/main.js"></script>
 
-  <title>title</title>
+  <title>HTML5 template</title>
 </head>
 
 <body>
-  <h1>title</h1>
+  <h1>HTML5 template</h1>
 
   <p>contents</p>
 </body>
