--- a/.vim/template/xhtml.xhtml
+++ b/.vim/template/xhtml.xhtml
@@ -1,57 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
-  <!-- fundamental meta-data -->
-  <meta charset="utf-8" />
-<!--
-  <base href="http://www.example.com/" />
--->
+  <meta charset="UTF-8" />
 
-  <!-- additional meta-data -->
   <meta name="author" content="janus_wel" />
-  <meta name="description" content="A template for xhtml5" />
-  <meta name="keywords" content="example,template,xhtml,xhtml5" />
-<!-- Delete commenting out if you need it.
-  <meta name="application-name" content="example" />
-  <meta http-equiv="Refresh" content="300" />
--->
+  <link rel="author" href="http://example.com/author/" />
 
-  <!-- relations to external resources -->
-<!-- I can't find definitions about these "rel" attributes in the W3C draft.
-  <link rel="author" href="mailto:janus.wel.3@gmail.com" />
-  <link rel="icon" href="icon.png" />
-  <link rel="prefetch" href="03.html" />
-  <link rel="index" href="index.html" />
-  <link rel="next" href="03.html" />
-  <link rel="prev" href="01.html" />
-  <link rel="first" href="01.html" />
-  <link rel="last" href="09.html" />
--->
+  <meta name="description" content="HTML5 template" />
+  <meta name="keywords" content="keywords,for,this,page" />
+  <link rel="icon" href="images/favicon.ico" />
 
-  <!-- stylesheets -->
-  <link rel="stylesheet" href="default.css" type="text/css" media="all" />
-<!--
-  <link rel="alternate stylesheet" href="bigfont.css" title="big font" type="text/css" media="all" />
--->
+  <link rel="prev" href="http://example.com/" />
+  <link rel="next" href="http://example.com/" />
 
-  <!-- scripts -->
-<!--
-  <script type="text/javascript" src="premises.js" charset="utf-8"></script>
-  <script type="text/javascript" src="wantedbutlater.js" charset="utf-8" async></script>
-  <script type="text/javascript" src="additional.js" charset="utf-8" defer></script>
--->
+  <link rel="stylesheet" href="styles/main.css" media="all" />
 
-  <title>This is a template for xhtml5</title>
+  <script src="scripts/main.js"></script>
+
+  <title>HTML5 template</title>
 </head>
 
 <body>
   <header>
-    <hgroup>
-      <h1>title</h1>
-      <h2>subtitle</h2>
-    </hgroup>
+    <h1>HTML5 template</h1>
+    <p>subtitle</p>
   </header>
 
   <article>
@@ -120,8 +93,8 @@
     </section>
 
     <footer>
-      <a href="2010/09/01/0001">permalink</a>
-      <time pubdate="" datetime="2010-09-01T12:00:00.0+09:00"></time>
+      <a href="2013/08/01/0001">permalink</a>
+      <time datetime="2013-08-01 12:00">2013 年 8 月 1 日 12:00</time>
       by <address>janus_wel</address>
     </footer>
   </article>
