Load common scripts from CDN in templates

--- a/.vim/template/xhtml.xhtml
+++ b/.vim/template/xhtml.xhtml
@@ -16,6 +16,10 @@
 
   <link rel="stylesheet" href="styles/main.css" media="all" />
 
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.8/require.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
   <script src="scripts/main.js"></script>
 
   <title>HTML5 template</title>
