--- a/.vim/template/html.html
+++ b/.vim/template/html.html
@@ -19,6 +19,7 @@
 
   <script src="scripts/require.config.js"></script>
   <script data-main="main.js" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.8/require.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
 
   <title>HTML5 template</title>
 </head>
