Update library version

--- a/.vim/template/xhtml.xhtml
+++ b/.vim/template/xhtml.xhtml
@@ -14,13 +14,12 @@
   <link rel="prev" href="http://example.com/" />
   <link rel="next" href="http://example.com/" />
 
-  <link rel="stylesheet" href="styles/main.css" media="all" />
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" media="all" />
+  <link rel="stylesheet" href="styles/main.css" media="all" />
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.8/require.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+  <script src="scripts/require.config.js"></script>
+  <script data-main="main.js" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
   <script src="scripts/main.js"></script>
 
   <title>HTML5 template</title>
