--- a/.vim/template/html.html
+++ b/.vim/template/html.html
@@ -18,8 +18,9 @@
   <link rel="stylesheet" href="styles/main.css" media="all">
 
   <script src="scripts/require.config.js"></script>
-  <script data-main="main.js" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.8/require.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+  <script data-main="main.js" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+  <script src="scripts/main.js"></script>
 
   <title>HTML5 template</title>
 </head>
